Archive2/bf/76ee97361a350e/output
main.cpp:5:5: error: implicit instantiation of undefined template 'S<int>'
    S<decltype(x)>();
    ^
main.cpp:1:29: note: template is declared here
template<class Type> struct S;
                            ^
1 error generated.
